fix(docs): doxybooks template opt

--- a/tools/documentation/api_doxygen/template/class_members_inherited_tables.tmpl
+++ b/tools/documentation/api_doxygen/template/class_members_inherited_tables.tmpl
@@ -61,7 +61,7 @@
 {% endfor %}
 {% endif -%}
 
-{%- if existsIn(base, "publicFunctions") -%}}
+{%- if existsIn(base, "publicFunctions") -%}
 
 |  Inherited Public functions|            |
 | -------------- | -------------- |
