docs: fix doxybooks template

--- a/tools/documentation/api_doxygen/template/class_members_inherited_tables.tmpl
+++ b/tools/documentation/api_doxygen/template/class_members_inherited_tables.tmpl
@@ -1,6 +1,9 @@
 {% for base in baseClasses -%}
 
-{% if existsIn(base, "url") %}Inherited from [{{base.name}}]({{base.url}}){% else %}{{base.name}}{% endif %}
+{% if existsIn(base, "url") %}
+Inherited from [{{base.name}}]({{base.url}}){% else %}{{base.name}}
+{% endif %}
+
 {%- if existsIn(base, "publicClasses") -%}
 
 
