docs(udf): Add udf doc generator
1. add doxybook2 script for udf
2. update template for udf
3. optimize udf doc by adding @brief

--- a/tools/documentation/template/details.tmpl
+++ b/tools/documentation/template/details.tmpl
@@ -1,3 +1,5 @@
+**Description**:
+
 {% if exists("brief") %}{{brief}}
 {% endif -%}
 
@@ -64,7 +66,9 @@
 {% endif -%}
 
 {% if exists("since") %}
-**Since**: {% if length(since) == 1 %}{{first(since)}}{% else %}
+**Since**:
+{% if length(since) == 1 %}{{first(since)}}
+{% else %}
 
 {% for item in since %}  * {{item}}
 {% endfor %}{% endif %}
