--- a/tools/documentation/template/nonclass_members_tables.tmpl
+++ b/tools/documentation/template/nonclass_members_tables.tmpl
@@ -107,16 +107,9 @@ template <{% for param in child.templateParams -%}
 {% endif -%}
 {%- if exists("publicFunctions") %}## Functions
 
-|                | Name           |
+| Name          | Description    |
 | -------------- | -------------- |
 {% for child in publicFunctions -%}
-| {% if existsIn(child, "templateParams") -%}
-template <{% for param in child.templateParams -%}
-{{param.typePlain}} {{param.name}}{% if existsIn(param, "defvalPlain") %} ={{param.defvalPlain}}{% endif -%}
-{% if not loop.is_last %},{% endif -%}
-{% endfor %}\> <br>{% endif -%}
-{% if child.virtual %}virtual {% endif -%}
-{% if existsIn(child, "type") %}{{child.type}} {% endif -%}
 | **[{{child.name}}]({{child.url}})**({% for param in child.params -%}
 {{param.type}} {{param.name}}{% if existsIn(param, "defval") %} ={{param.defval}}{% endif -%}
 {% if not loop.is_last %}, {% endif -%}
@@ -125,7 +118,14 @@ template <{% for param in child.templateParams -%}
 {% if child.default %} =default{% endif -%}
 {% if child.deleted %} =deleted{% endif -%}
 {% if child.pureVirtual %} =0{% endif -%}
- {% if existsIn(child, "brief") %}<br>{{child.brief}}{% endif %} |
+| {% if existsIn(child, "templateParams") -%}
+template <{% for param in child.templateParams -%}
+{{param.typePlain}} {{param.name}}{% if existsIn(param, "defvalPlain") %} ={{param.defvalPlain}}{% endif -%}
+{% if not loop.is_last %},{% endif -%}
+{% endfor %}\> <br>{% endif -%}
+{% if child.virtual %}virtual {% endif -%}
+{% if existsIn(child, "type") %}{{child.type}} {% endif -%}
+{% if existsIn(child, "brief") %}<br>{{child.brief}}{% endif %}|
 {% endfor %}
 {% endif -%}
 {%- if exists("publicAttributes") %}## Attributes
